--- a/Threads_Processes_IPC/IPC/Questions/Building_H2O.adoc
+++ b/Threads_Processes_IPC/IPC/Questions/Building_H2O.adoc
@@ -1,11 +1,9 @@
-**Building H2O**
-- [Approach-1. 2 variables](#a1)
-  - Code
-    - [CPP, condition_variable](#cpp)
+:toc:
+:toclevels: 6
 
 
 
-### [1117. Building H2O](https://leetcode.com/problems/building-h2o/description/)
+== link:https://leetcode.com/problems/building-h2o/description/[1117. Building H2O]
 - There are two kinds of threads: oxygen and hydrogen. Your goal is to group these threads to form water molecules.
 - There is a barrier where each thread has to wait until a complete molecule can be formed. Hydrogen and oxygen threads will be given releaseHydrogen and releaseOxygen methods respectively, which will allow them to pass the barrier. These threads should pass the barrier in groups of three, and they must immediately bond with each other to form a water molecule. You must guarantee that all the threads from one molecule bond before any other threads from the next molecule do.
 - In other words:
@@ -24,45 +22,71 @@ Output: "HHOHHO"
 Explanation: "HOHHHO", "OHHHHO", "HHOHOH", "HOHHOH", "OHHHOH", "HHOOHH", "HOHOHH" and "OHHOHH" are also valid answers.
 ```
 
-### Code
-<a name=cpp></a>
-#### CPP. condition_variable
+== Approach-1. Synchronization
+=== Logic
+* Initialize 2 variables (h=2, o=1) in class constructor
+* Enter hydrogen() only when h>0
+** On entering h--
+** when h and o both becomes zero make (h=2,o=1)
+* Enter oxygen() only when o>0
+** On entering o--
+** when h and o both becomes zero make (h=2,o=1)
+
+=== Code
+==== CPP. condition_variable
 ```cpp
 class H2O {
-    mutex m;
+    int h,o;
+    mutex mtx;
     condition_variable cv;
-    int o, h;
 public:
     H2O() {
-        o = 1;
         h = 2;
+        o = 1;
     }
-    void hydrogen(function<void()> releaseHydrogen) {
-        unique_lock<mutex> ul(m);
-        cv.wait(ul, [this]() { return h>0;});
-         
-        releaseHydrogen();    // releaseHydrogen() outputs "H".
-        
-        h -= 1;
-        if (h==0 && o==0){
-            h=2;
+    void reset() {
+        if (h==0 && o==0) {
+            h=2;   
             o=1;
         }
+    }
+
+    void hydrogen(function<void()> releaseHydrogen) {
+        unique_lock<mutex> ul(mtx);
+
+        // Lambda, return true when you want to go inside, else false
+        auto wait_condition = [this]() {
+            if (h>0)
+                return true;
+            return false;
+        };
+        cv.wait(ul, wait_condition);
+
+        // releaseHydrogen() outputs "H". Do not change or remove this line.
+        releaseHydrogen();
+
+        h -= 1;
+        reset();
         ul.unlock();
         cv.notify_one();
     }
 
     void oxygen(function<void()> releaseOxygen) {
-        unique_lock<mutex> ul(m);
-        cv.wait(ul, [this]() { return o>0;});
-         
-        releaseOxygen();    // releaseOxygen() outputs "O".
-        
+        unique_lock <mutex> ul(mtx);
+
+        // Lambda, return true when you want to go inside, else false
+        auto wait_condition = [this]() {
+            if (o>0)
+                return true;
+            return false;
+        };
+        cv.wait(ul, wait_condition);
+
+        // releaseOxygen() outputs "O". Do not change or remove this line.
+        releaseOxygen();
+
         o -= 1;
-        if (h==0 && o==0){
-            h=2;
-            o=1;
-        }
+        reset();     
         ul.unlock();
         cv.notify_one();
     }
