--- a/Projects/Rust/REST_API_HTTP_Server_ActixWeb/README.adoc
+++ b/Projects/Rust/REST_API_HTTP_Server_ActixWeb/README.adoc
@@ -3,7 +3,7 @@
 
 == Actix http Webserver exposing REST API
 * link:/Networking/OSI-Layers/Layer-7/WebServer_WebClient_WebService/WebClient_Connecting_WebServer/REST/README.adoc#how[How REST Works]
-- Remember REST-API exposes a resource via link:/Networking/OSI-Layers/Layer-7/Protocols/HTTP/README.adoc[HTTP CRUD Methods] and allows to perform operations on it. 
+* Remember REST-API exposes a resource via link:/Networking/OSI-Layers/Layer-7/Protocols/HTTP/README.adoc[HTTP CRUD Methods] and allows to perform operations on it. 
 ```c
 //Here we have taken Resource=user.
 
