--- a/DS_Questions/Data_Structures/Linked_Lists/Find/Middle/Middle_of_the_Linked_List.adoc
+++ b/DS_Questions/Data_Structures/Linked_Lists/Find/Middle/Middle_of_the_Linked_List.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 6
 
-== list:https://leetcode.com/problems/middle-of-the-linked-list/[876. Middle of the Linked List]
+== link:https://leetcode.com/problems/middle-of-the-linked-list/[876. Middle of the Linked List]
 Given the head of a singly linked list, return the middle node of the linked list.
 
 If there are two middle nodes, return the second middle node.
