--- a/DS_Questions/Questions/Strings/Arrange_Shuffle_Organize_Remove/Rearrange_Reformat_Redistribute_Recreate/Custom_Sort_String.adoc
+++ b/DS_Questions/Questions/Strings/Arrange_Shuffle_Organize_Remove/Rearrange_Reformat_Redistribute_Recreate/Custom_Sort_String.adoc
@@ -49,7 +49,7 @@ uordered_map = <k,1> <q,1>
 * Space: O(n)
 
 === Code
-==== CPP
+==== CPP11 (Basic)
 ```cpp
 class Solution {
     void delete1(unordered_map<char, int>& um, char c, string& out) {
