Update and rename Contiguous_Number_of_Subarray_With_Sum_Equal_to_k.md to Contiguous_Number_of_Subarray_With_Sum_Equal_to_k.adoc

--- a/DS_Questions/Questions/vectors_arrays/SubSequence_SubArray/SubArrays/Contiguous_Number_of_Subarray_With_Sum_Equal_to_k.adoc
+++ b/DS_Questions/Questions/vectors_arrays/SubSequence_SubArray/SubArrays/Contiguous_Number_of_Subarray_With_Sum_Equal_to_k.adoc
@@ -1,11 +1,7 @@
-**[Number of Subarray Sum Equals K](https://leetcode.com/problems/subarray-sum-equals-k/)**
-- [Approach-1. Brute Force / O(n<sup>3</sup>)](#ap1)
-- [Approach-2. Cumulative Sum / O(n<sup>2</sup>)](#ap2)
-- [Approach-3. Cumulative Sum / O(n<sup>2</sup>) No Extra Space](#ap3)
-- [Approach-4. Unordered_map O(n)](#ap4)
+:toc:
+:toclevels: 6
 
-
-### Number of Subarray Sum Equals K
+== link:https://leetcode.com/problems/subarray-sum-equals-k/[560. Subarray Sum Equals K]
 Given an array of integers nums and an integer k, return the total number of continuous subarrays whose sum equals to k. Examples
 ```c
 Input: nums = [1,1,1], k = 2
@@ -21,9 +17,8 @@ Input: {-1,2,3,2,-2},  k = 5
 Output: 3   //{2,3}, {3,2}, {2,3,2,-2}
 ```
 
-<a name=a1></a>
-### Approach-1 //Brute Force, O(n<sup>3</sup>)
-**Logic:** Take every possible subarray and sum
+== Approach-1 //Brute Force, O(n^3^)
+* *Logic:** Take every possible subarray and sum
 ```c
 k = 5
 -1  2  3  2  -2   //subarry[-1,2], possible sums: (-1+2=1)
@@ -33,10 +28,12 @@ k = 5
  i     j
  so on
 ```
-#### Complexity
-- **Time:** O(n<sup>3</sup>)  3 for loops
-- **Space:** [O(1). Constant Space](/DS_Questions)
-#### Code
+=== Complexity
+* Time: O(n^3^)  3 for loops
+* Space: link:/DS_Questions[O(1). Constant Space]
+
+=== Code
+==== CPP
 ```cpp
   int subarraySum(std::vector<int>& nums, int k) {
     int count=0;
@@ -53,10 +50,9 @@ k = 5
   }
 ```
 
-<a name=ap2></a>
-### Approach-2. Cumulative Sum, Time:O(n<sup>2</sup>), Space:O(n+1)
-#### Logic
-- *1.* Find cumulative sum(ie sum of all prev elements of array upto this element) and store in seperate array `sum` size=arr+1
+== Approach-2. Cumulative Sum (Prefix Sum), Time:O(n^2^), Space:O(n+1)
+=== Logic
+1. Find cumulative sum(ie sum of all prev elements of array upto this element) and store in seperate array `sum` size=arr+1
 ```c
 arr =  -1  2  3  2  -2
         0  1  2  3   4
@@ -72,7 +68,7 @@ k = 5
    0 -1  1  4  6  4
    0  1  2  3  4  5
 ```
-- *2.* Traverse through all subarrays. if cumulative_sum_upto_element - element == k. Increment count.
+2. Traverse through all subarrays. if cumulative_sum_upto_element - element == k. Increment count.
 ```c
 k = 5
 cum_sum        0    -1       1       4         6         4
@@ -80,11 +76,13 @@ cum_sum-ele(0)     -1-0     1-0     4-0       6-0       4-0
            (-1)    -1-1     1-1     4--1=5    6--1      4--1=5
            (1)     -1-1     1-1     4-1       6-1=5     4-1
 ```
-#### Complexity
-- **Time:** O(n<sup>2</sup>)
-- **Space:** O(n+1)
-#### Code
-```c++
+=== Complexity
+* Time: O(n^2^)
+* Space: O(n+1)
+
+=== Code
+==== CPP
+```cpp
   int subarraySum(std::vector<int>& nums, int k) {
     int count=0;
     std::vector<int> cum_sum(nums.size()+1);
@@ -103,14 +101,14 @@ cum_sum-ele(0)     -1-0     1-0     4-0       6-0       4-0
   }
 ```
 
-<a name=ap3></a>
-### Approach-3  //Cumulative Sum, Time:O(n<sup>2</sup>), Space:O(1)
-#### Logic
+== Approach-3  //Cumulative Sum, Time:O(n<sup>2</sup>), Space:O(1)
+=== Logic
 Same as approach-2, But donot take seperate array to store cumulative sum(ie sum of all prev elements of array upto this element), calculate during for loop.
-#### Complexity
+
+=== Complexity
 - **Time:** O(n<sup>2</sup>)
 - **Space:** O(1)
-#### Code
+=== Code
 ```c++
   int subarraySum(std::vector<int>& nums, int k) {
     int count=0;
@@ -127,13 +125,12 @@ Same as approach-2, But donot take seperate array to store cumulative sum(ie sum
   }
 ```
 
-<a name=ap4></a>
-### Approach-4.  unordered_map. Time:O(n). Space:O(n)
-#### Logic
-  - *1.* if (cumulative_sum_i(sum of all prev elements of array upto this element) - cumulative_sum_j(sum of all prev elements of array upto this element)) == k. Then sum of elements lying between indices i and j is k.
-  - *2.* Create unordered_map `<key = cumulative_sum_i, no. of occurrences of cumulative_sum_i)>`
-  - *3.* Traverse the array, if we find new sum, create a new entry. If same sum is encountered, Update the value of this key.
-  - *4.* Subseq with sum=k would be same as searching (cumulative_sum - k) in unordered_map.
+== Approach-4.  unordered_map. Time:O(n). Space:O(n)
+=== Logic
+1. if (cumulative_sum_i(sum of all prev elements of array upto this element) - cumulative_sum_j(sum of all prev elements of array upto this element)) == k. Then sum of elements lying between indices i and j is k.
+2. Create unordered_map `<key = cumulative_sum_i, no. of occurrences of cumulative_sum_i)>`
+3. Traverse the array, if we find new sum, create a new entry. If same sum is encountered, Update the value of this key.
+4. Subseq with sum=k would be same as searching (cumulative_sum - k) in unordered_map.
 ```c
 arr =  -1  2  3  2  -2
         0  1  2  3   4
@@ -147,10 +144,12 @@ i=2         4                         4              1              4 - 5 = -1  
 i=3         6                         6              1              6 - 5 = 1     //Present in um. count=2
 i=4         4                         4              2              4 - 5 = -1    //Present in um. count=3
 ```
-#### Complexity
-- **Time:** O(n)
-- **Space:** O(n+1)
-#### Code
+=== Complexity
+* Time: O(n)
+* Space: O(n+1)
+
+=== Code
+==== CPP
 ```cpp
   int subarraySum(std::vector<int>& nums, int k) {
     int count=0, sum=0;
