--- a/DS_Questions/Questions/vectors_arrays/Intervals/Merge_Overlapping_Intervals.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Intervals/Merge_Overlapping_Intervals.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 6
 
-=== link:https://leetcode.com/problems/merge-intervals/description/[56. Merge Intervals]
+== link:https://leetcode.com/problems/merge-intervals/description/[56. Merge Intervals]
 Given an array of intervals where intervals[i] = [starti, endi], merge all overlapping intervals, and return an array of the non-overlapping intervals that cover all the intervals in the input.
 
 Example 1:
@@ -11,8 +11,8 @@ Output: [[1,6],[8,10],[15,18]]
 Explanation: Since intervals [1,3] and [2,6] overlap, merge them into [1,6].
 ```
 
-=== Approach-1. Sort, O(nlogn). Inplace array change
-==== Logic
+== Approach-1. Sort, O(nlogn). Inplace array change
+=== Logic
 1. Start from 2 starting nodes
 ```c
 input = [[1,3], [2,6], [8,10], [9,11], [10,12]]
@@ -20,7 +20,7 @@ input = [[1,3], [2,6], [8,10], [9,11], [10,12]]
   	/\
         itertor it
 ```  
-2. if((a2 <= b1) && (b2 >= a1))	Merge these
+2. if((a2 < = b1) && (b2 >= a1)) Merge these
 ```c
 	[[1,6], [8,10], [9,11], [10,12]]
  	 a1 b1  a2 b2
@@ -35,13 +35,13 @@ input = [[1,3], [2,6], [8,10], [9,11], [10,12]]
     		 it
 ```
 
-==== Complexity
+=== Complexity
 * *Time:* O(nlogn)
 * *Space:* O(1). No extra output array
 
-==== Code
-===== CPP
-====== input = vector<vector<int>>
+=== Code
+==== CPP
+===== input = vector<vector<int>>
 ```c++
 using vvI = vector<vector<int>>;
 class Solution {
@@ -70,7 +70,7 @@ public:
     }
 };
 ```
-====== input = vector<pair<int,int>>
+===== input = vector<pair<int,int>>
 ```cpp
 using vP = vector<pair<int,int>>;
 
