--- a/DS_Questions/Questions/vectors_arrays/Intervals/Minimum_Number_of_Arrows_to_Burst_Balloons.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Intervals/Minimum_Number_of_Arrows_to_Burst_Balloons.adoc
@@ -112,3 +112,23 @@ impl Solution {
     }
 }
 ```
+==== Go
+```go
+func findMinArrowShots(points [][]int) int {
+    sort.Slice(points, func(i, j int) bool {
+        return points[i][0] < points[j][0]
+    })
+    arrows := 1
+    end := points[0][1]
+
+    for i := 0; i < len(points); i++ {
+        if points[i][0] > end {
+            arrows += 1
+            end = points[i][1]
+        } else {
+            end = min(end, points[i][1])
+        }        
+    }
+    return arrows
+}
+```
