--- a/DS_Questions/Questions/Strings/Arrange_Shuffle_Organize_Remove/Rearrange_Reformat_Redistribute_Recreate/Rearrange_Tasks.adoc
+++ b/DS_Questions/Questions/Strings/Arrange_Shuffle_Organize_Remove/Rearrange_Reformat_Redistribute_Recreate/Rearrange_Tasks.adoc
@@ -1,9 +1,15 @@
-## [Task Scheduler](https://leetcode.com/problems/task-scheduler/)
-- Given a array of tasks, representing the tasks a CPU needs to do, where each letter represents a different task. Each task is done in one unit of time. For each unit of time.
-- There is a non-negative integer n that represents the cooldown period between two same tasks (the same letter in the array), that is that there must be at least n units of time between any two same tasks.
-- Return the least number of units of times that the CPU will take to finish all the given tasks.
-- Examples
+:toc:
+:toclevels: 6
+
+== link:https://leetcode.com/problems/task-scheduler/[Task Scheduler]
+Given a array of tasks, representing the tasks a CPU needs to do, where each letter represents a different task. Each task is done in one unit of time. For each unit of time.
+
+There is a non-negative integer n that represents the cooldown period between two same tasks (the same letter in the array), that is that there must be at least n units of time between any two same tasks.
+
+Return the least number of units of times that the CPU will take to finish all the given tasks.
+
 ```c
+Example1
 Input: tasks = ['A','B','A'], n=2
 Output = 4
 A B idle A        //A can only be scheduled after 2 sec of cooling period
@@ -23,62 +29,67 @@ Output: 16
 A B C A D E A F G A idle idle A idle idle A
 ```
 
-## 1. Approach-1    //Intution. Time:O(n), Space:O(n)
-> tasks = `['A','A','A','B','B','C']`, n = 2
-
-  - *1.* Find task having max freq and create a imaginary array seperated by cooling period and task
+== Approach-1    //Time:O(n), Space:O(n)
+=== Logic
+```c
+tasks = `['A','A','A','B','B','C']`, n = 2
+```
+1. Find task having max freq and create a imaginary array seperated by cooling period and task
 ```c
   task frequency
     A     3
     B     2
     C     1    
     
-    A _ _ A _ _ A   //idle_time = 4.  Remove A from list since its already schedueled
+    A _ _ A _ _ A   //idle_time = 4. idle_time means time when nothing is scheduled.
+    Remove A from list since its already schedueled
     
   task frequency
     B     2
     C     1
 ```
-  - *2.* Fill idle time with next task having max frequency.
+2. Fill idle time with next task having max frequency.
 ```c
   A B _ A B _ A         //idle_time = 2. Remove B from list, since its scheduled.
   
   task frequency
     C     1
 ```
-  - *3.* Repeat process until task list is not empty.
+3. Repeat process until task list is not empty.
 ```c
   A B C A B _ A         //idle_time = 1. Remove C from list, since its scheduled.  
 ```
-  - *4.* return idle_time + task.size()
+4. return idle_time + task.size()
 
-### Logic
-  - *1.* Create unordered_map of frequency. key=char, value=freq
+=== Implemented in Code
+1. Create unordered_map of frequency. key=char, value=freq
 ```c
   |B,2|A,3|C,1|
 ```
-  - *2.* Create maxHeap of key=frequency, value=char
+2. Create maxHeap of key=frequency, value=char
 ```c
     |3,A|
     /   \
  |2,B|  |1,C|
 ```
-  - *3.* Find maximum idle time based on cooling period and task having max freqeuncy. Assumed max freq task already scheduled.
+3. Find maximum idle time based on cooling period and task having max freqeuncy. Assumed max freq task already scheduled.
 ```c
   A _ _ A _ _ A
     |2,B|
         \
         |1,C|
 ```
-  - *4.* Place other tasks on schedule array until tasks becomes empty and reduce idle_time
+4. Place other tasks on schedule array until tasks becomes empty and reduce idle_time
 ```c
   A B _ A B _ A         //idle_time = 2. Remove B from list, since its scheduled.
 A B C A B _ A         //idle_time = 1. Remove C from list, since its scheduled.    
 ```
-### Code
-```c++
+
+=== Code
+==== CPP
+```cpp
 int leastInterval(std::vector<char>& tasks, int n) {
-  if (not n)
+  if (!n)
     return tasks.size();
     
   int top=0;
@@ -98,7 +109,7 @@ int leastInterval(std::vector<char>& tasks, int n) {
   max_ele = top;
   idle_time = (max_ele - 1)*n;        //3
 
-  while (pq.empty() != 1 && idle_time){
+  while (!pq.empty() && idle_time){
     top = pq.top().first; pq.pop();
     idle_time -=  std::min(max_ele-1, top);   //4
   }
@@ -111,11 +122,16 @@ int main(){
   std::cout<<s.leastInterval(c,n);
 }  
 ```
-### Complexity
-- **Time:** O(n)
+
+=== Complexity
+* Time: O(n)
+```
   - O(n): Creating unordered_map
   - O(n): Creating maxHeap
   - O(n): Traversing maxHeap  //Considering all non-repeating tasks 
-- **Space** O(n)
+```  
+* Space: O(n)
+```
   - O(n): unordered_map
   - O(n): maxHeap
+```
