--- a/DS_Questions/Data_Structures/Linked_Lists/Merge/Merge_In_Between_Linked_Lists.adoc
+++ b/DS_Questions/Data_Structures/Linked_Lists/Merge/Merge_In_Between_Linked_Lists.adoc
@@ -49,10 +49,78 @@ count = 3
         |   |
        p1  p2
 ```
-* When (count == a), point p1 to list1
+* When (count == a), point p1 to list2
 ```c
 count = 3
  10  1  13  6  9  5
-        |   |
-       p1  p2
+      p1|   |
+        |  p2
+        |
+       1000000 1000001 1000002
+                        p3
+```
+* Increment only p2, until count != b. When count == b, p3->next = p2->next and break
+```c
+b = 4
+count = 4
+ 10  1  13  6  9  5
+      p1|      |
+        |      p2
+        \/
+       1000000 1000001 1000002
+                        p3
+
+
+ 10  1  13  6  9  5
+list1 p1|      |  /\
+        |      p2  |
+        \/          ------|
+       1000000 1000001 1000002
+                        p3
+return list1
+```
+=== Complexity
+* Time: O(m+n). m=len(list1), n=len(list2)
+* Space: O(1)
+
+=== Code
+==== CPP
+```cpp
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* mergeInBetween(ListNode* list1, int a, int b, ListNode* list2) {
+        ListNode *p1 = list1, *p2 = list1->next, *p3 = list2;
+        int count = 1;
+        bool set = false;
+        while (p2 || count != b) {
+            if (count == a) {
+                p1->next = list2;
+                set = true;
+                // Traverse till end of list2
+                while (p3->next) {
+                    p3 = p3->next;
+                }
+            }
+            if (count == b) {
+                p3->next = p2->next;
+                break;
+            }
+            if (!set)
+                p1 = p1->next;
+            p2 = p2->next;
+            count++;
+        }
+        return list1;
+    }
+};
 ```
