--- a/DS_Questions/Data_Structures/Linked_Lists/Reverse/Reverse.adoc
+++ b/DS_Questions/Data_Structures/Linked_Lists/Reverse/Reverse.adoc
@@ -1,33 +1,43 @@
-## Reverse LL
-- Example
-```c
-  Input = 1->2->3->4->N
-  Output = 4->3->2->1->N
+:toc:
+:toclevels: 6
+
+== link:https://leetcode.com/problems/reverse-linked-list/[206. Reverse Linked List]
+Given the head of a singly linked list, reverse the list, and return the reversed list.
+
+Example 1:
+
+image::https://assets.leetcode.com/uploads/2021/02/19/rev1ex1.jpg?raw=true[LL Reverse]
+```
+Input: head = [1,2,3,4,5]
+Output: [5,4,3,2,1]
 ```
 
-# [Self Video Explanation](https://youtu.be/UheqFiqUbgQ)
-
-## Logic (3 pointers)
-- *1.* Take 3 pointers pointing 3 consecutive nodes in LL.
+== Approach-1 (3 pointers)
+=== [Self Video Explanation](https://youtu.be/UheqFiqUbgQ)
+=== Logic
+1. Take 3 pointers pointing 3 consecutive nodes in LL.
 ```c
   1  ->  2  ->  3  ->  4  ->  N
  /\     /\      /\
  a       b      c
 ```
-- *2.* Make b->next = a. if a is head node, Make its next = NULL
+2. Make b->next = a. if a is head node, Make its next = NULL
 ```c
 N<-1  <-  2      3  ->  4  ->  N
   /\     /\      /\
   a       b      c
 ```
-- *3.* Move every pointer 1 step a head and so on.
+3. Move every pointer 1 step a head and so on.
 ```c
 N<-1  <-  2      3  ->  4  ->  N
          /\      /\     /\
           a      b      c
 ```
+=== Complexity
+* Time: O(n)
+* Space: O(1)
 
-## Code
+=== Code
 ```c
 #include<iostream>
 using namespace std;
