Update and rename Duplicate_Elements_in_1_Array.md to Duplicate_Elements_in_1_Array.adoc

--- a/DS_Questions/Questions/vectors_arrays/Pairs_Duplicates/Duplicates/UnSorted/Duplicate_Elements_in_1_Array.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Pairs_Duplicates/Duplicates/UnSorted/Duplicate_Elements_in_1_Array.adoc
@@ -4,18 +4,15 @@
 - [Approach-3, O(n), O(1)](#a3)
   - [Logic](#l)
 
-## Duplicate elements in unsorted array
-- Find duplicates in array in O(n) time & constant extra space.
--  where all the integers of nums are in the range `[1, n]`
-- Example
+== link:https://leetcode.com/problems/find-all-duplicates-in-an-array/[442. Find All Duplicates in an Array]
+Find duplicates in array in O(n) time & constant extra space. where all the integers of nums are in the range `[1, n]`
 ```c
 Input: [4, 3, 2, 7, 8, 2, 3, 1]
 Output: [2, 3]
 ```
 
-<a name=a1></a>
-### Approach-1    //Store count   `Time:O(n) Space:O(n)`
-- Traverse array store count in seperate array
+== Approach-1    //Store count   `Time:O(n) Space:O(n)`
+* Traverse array store count in seperate array
 ```c
 Input:        4   3   2   7   8   2   3   1
 
@@ -25,14 +22,9 @@ index         0   1   2   3   4   5   6   7   8
 -> index=1 store freq of number 2
 ```
 
-<a name=a2></a>
-### Approach-2    //Hash Table     `Time:O(n), Space:O(n)`
-- Take a hash table.
-- Insert into HashTable: if element is not present earlier in hashMap.
-  - if element exists in hashtable(it means its duplicate). -> insert in vector
-- Complexity:
-  - Space: O(n)
-  - Time: O(1)
+== Approach-2    //store count in hashset     `Time:O(n), Space:O(n)`
+* if element exists in hashtable(it means its duplicate). -> insert in vector
+* Complexity: Space: O(n), Time: O(n)
 ```c
     vector<int> findDuplicates(vector<int>& nums) {
       unordered_set<int> us;
@@ -48,13 +40,13 @@ index         0   1   2   3   4   5   6   7   8
     }
 ```
 
-<a name=a3></a>
-### Approach-3    //Time:O(n), Space:O(1)
-- We will extend Approach-1. In approach-1 we are storing count of occurences in Seperate array, Now we will store count of occurences of elements in input array only. {Since we donot have extra Space}
-<a name=l></a>
-#### Logic
-- Store count of occurences of elements in Original Array. Increment element by sizeofArray.
-  - *Why increment by sizeofArray* Because we need to retrieve original element also. This is Preserving original Element.
+== Approach-3    //Time:O(n), Space:O(1)
+* We will extend Approach-1. 
+* In approach-1 we are storing count of occurences in Seperate array, Now we will store count of occurences of elements in input array only. {Since we donot have extra Space}
+
+=== Logic
+* Store count of occurences of elements in Original Array. Increment element by sizeofArray.
+* *Why increment by sizeofArray* Because we need to retrieve original element also. This is Preserving original Element.
 - Traverse array again
   - if `arr[i] > 2*sizeOfArray` it means This element(ie index) occured 2 times.
   - if `arr[i] > 3*sizeOfArray` it means This element(ie index) occured 3 times.
@@ -73,12 +65,10 @@ a[1]=3.   a[3] += 2*a[1]
 
 Array:    4   3   2   7  16   2   3   1
 Index:    0   1   2   3   4   5   6   7
+
+ 4  3  2  7+8=15  16  2  3  1
+ 0  1  2     3     4  5  6  7
 ```
-
-| elements-> | 4 | 3 | 2 | 7+8=15 | 16 | 2 | 3 | 1 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| Indexes-> | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
-
 *`i = 2, a[2]=2, Increment 8 at index 2`*
 `a[3] = a[3]+8`
 
@@ -123,7 +113,10 @@ Index:    0   1   2   3   4   5   6   7
 
 **Duplicate elements=index-of-array whose value > 16?**
 - Remember, this is not input array, this is a hashMap where elements are indexes and occurence count is value at index.
-```
+
+=== Code
+==== CPP
+```cpp
 vector<int> findDuplicates(vector<int>& a) {
     int size = a.size();
     vector<int> v;
