--- a/DS_Questions/Questions/vectors_arrays/Pairs_Duplicates/Duplicates/UnSorted/Duplicate_Elements_in_1_Array.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Pairs_Duplicates/Duplicates/UnSorted/Duplicate_Elements_in_1_Array.adoc
@@ -65,51 +65,46 @@ Index:    0   1   2   3   4   5   6   7
 
  4  3  2  7+8=15  16  2  3  1
  0  1  2     3     4  5  6  7
-```
+
 *`i = 2, a[2]=2, Increment 8 at index 2`*
 `a[3] = a[3]+8`
 
-| elements-> | 4 | 3 | 2+8=10 | 15 | 16 | 2 | 3 | 1 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| Indexes-> | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
+ 4  3  2+8=10  15  16  2  3  1 
+ 0  1    2     3   4   5  6  7 
 
 *`i = 3, a[3]=15, Since we are adding 8 to Original Elements, We need to retrieve Original element to increment its occurance count. original_element=a[i]%8. We might have added 8 and this might be incremented value, which is the present case. original_element=a[4]%8=7. Increment 8 at index 7`*
 `a[7] = a[7]+8`
 
-| elements-> | 4 | 3 | 10 | 15 | 16 | 2 | 3 | 1+8=9 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| Indexes-> | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
+4  3 10  15  16  2  3  1+8=9
+0  1  2  3   4   5  6   7
+
 
 *`i = 4, a[4]=16, original_element=a[4]%8=0. Increment 8 at index 0`*
 `a[0] = a[0]+8`
 
-| elements-> | 4+8=12 | 3 | 10 | 15 | 16 | 2 | 3 | 9 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| Indexes-> | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
+4+8=12 3  10  15  16  2  3  9 
+    0  1  2  3   4   5  6   7
 
 *`i = 5, a[5]=2, original_element=a[2]%8=2. Increment 8 at index 2`*
 `a[2] = a[2]+8`
 
-| elements-> | 12 | 3 | 10+8=18 | 15 | 16 | 2 | 3 | 9 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| Indexes-> | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
+ 12  3  10+8=18  15  16  2  3  9 
+  0  1     2     3   4   5  6  7
 
 *`i = 6, a[6]=3, original_element=a[6]%8=3. Increment 8 at index 3`*
 `a[3] = a[3]+8`
 
-| elements-> | 12 | 3 | 18 | 15+8=23 | 16 | 2 | 3 | 9 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| Indexes-> | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
+ 12  3  18  15+8=23  16  2  3  9
+  0  1   2      3     4  5  6  7 
 
 *`i = 7, a[7]=9, original_element=a[7]%8=1. Increment 8 at index 1`*
 `a[1] = a[1]+8`
 
-| elements-> | 12 | 3+8=11 | 18 | 23 | 16 | 2 | 3 | 9 |
-| --- | --- | --- | --- | --- | --- | --- | --- | --- |
-| Indexes-> | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
-
-**Duplicate elements=index-of-array whose value > 16?**
-- Remember, this is not input array, this is a hashMap where elements are indexes and occurence count is value at index.
+ 12  3+8=11  18  23  16  2  3  9
+  0     1     2  3    4  5  6  7 
+```
+* Duplicate elements=index-of-array whose value > 16?
+** Remember, this is not input array, this is a hashMap where elements are indexes and occurence count is value at index.
 
 === Code
 ==== CPP
