--- a/DS_Questions/Sorting/Cyclic_Sort.adoc
+++ b/DS_Questions/Sorting/Cyclic_Sort.adoc
@@ -7,6 +7,38 @@
 * The basic idea is to iterate through the array and place each element in its intended position until the entire array is sorted.
 * Example:
 ```cpp
-arr = [3,4,1,5,2]
+arr = [5,2,4,3,1]
+       0 1 2 3 4 
 
+output = [1,2,3,4,5]
+```
+
+== Logic
+* Input array is not sorted. We check whether arr[i] is at its correct place or not?
+```cpp
+arr = [5,2,4,3,1]
+       0 1 2 3 4 
+```
+* Assuming we have elements from {1 to n}. So 1's place is index=0, 2's place is index=1
+** correct place for 5? index=4. Correct place for 4? index=3.
+** correct place of arr[i] is i-1
+
+== Code
+=== CPP
+```cpp
+int main() {
+    vector<int> v = {5,2,4,3,1};
+    int correct_index = 0;
+
+    for (int i=1; i<=v.size(); i++) {
+        //element v[i]. it correct place = i-1
+        // if v[i] is not at correct place swap
+        if (v[i-1] != i)
+          swap (v[i-1], v[v[i-1] - 1]);
+   }
+    cout << "Sorted\n";
+    for(auto&i:v)
+        cout << i << " ";
+    return 0;
+}
 ```
